add content to index(temporal)

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
     {{ .Hugo.Generator }}
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 {{ .Scratch.Add "title" "" }}{{ if isset .Site.Data.titles .Title }}{{ .Scratch.Set "title" (index .Site.Data.titles .Title).title }}{{ else }}{{ .Scratch.Set "title" .Title}}{{end}}
-    <title>Hugo - {{ .Scratch.Get "title" }}</title>
+    <title>CVMI - {{ .Scratch.Get "title" }}</title>
 
     <link href="/css/bootstrap-gohugo.css" rel="stylesheet">
     <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
@@ -23,7 +23,7 @@
   <section id="container" class="">
 
       <!--header start-->
-	  <img src="/img/cell_img4.png" width="100%" >
+	  <img src="/img/cell_img5.png" width="100%" >
       <div class="header black-bg">
             <!--div class="toggle-nav">
                 <i class="fa fa-bars"></i>
@@ -34,7 +34,7 @@
             <!--logo end-->
             <div class="nav title-row" id="top_menu">
                 <h1 class="nav top-menu">{{.Site.Title}}</h1>
-				<h2 class="nav">Las Vegas, Nevada, 1 July, 2016, PM.</h2>
+				<h2 class="nav">Las Vegas, Nevada, 1 July, 2016</h2>
             </div>
       </div>
       <!--header end-->
